ws_lidar/log/build_2025-03-06_12-31-14/gpsPubSub/stderr.log
  File "/home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub/mpu_publisher.py", line 122
    if norm < 1e-10
                   ^
SyntaxError: expected ':'

